auto-test/tests/chapter_18/invalid_parse/struct_decl_kw_wrong_order.c

s struct x { int a; };

int main(void) {
    return 0;
}